--- a/index.html
+++ b/index.html
@@ -75,16 +75,11 @@
         <p class="bienvenida">Bienvenidas!</p>
         <h1>Salon Glamour & Estilo</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Exercitationem, fugiat delectus porro suscipit architecto ab impedit
-          accusantium quod voluptate quaerat odio sunt quisquam odit, sapiente
-          aut esse possimus nulla totam! Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Voluptate eveniet placeat nesciunt harum similique
-          ab, illo debitis ullam ipsa labore quidem vitae sunt et quasi
-          veritatis? Excepturi ex non cumque. Lorem, ipsum dolor sit amet
-          consectetur adipisicing elit. Fugiat eligendi sint porro dolor sunt
-          nam vero saepe cum ullam! Possimus, suscipit asperiores. Facilis eos
-          quibusdam repellendus ab suscipit
+          Glamour y Estilo, te ofrece sus servicios de Belleza entregando variedades según tú estilo!!!
+Color, Iluminación, Cortes y tratamientos capilares, también realizamos  evaluación, asesoría y cuidados capilares para Tu cabello.
+Nos caracterizamos por recomendar y aconsejar para que tu Look sea el que deseas!!
+
+“ La vida es demasiado corta para llevar un Pelo Aburrido”
         </p>        
         <a href="https://wa.me/56962964710?text=Hola!!%20quisiera%20AGENDAR%20UNA%20HORA" target="_blank" class="btn btn-nuevo">Agenda tu hora</a>
       </div>
@@ -451,7 +446,7 @@
             <input type="text" placeholder="Ej: Maria Pino" name="nombre_suscripcion" /> 
             <input type="email" placeholder="Ej: ejemplo@ej.com" name="correo_suscripcion" />
             <input type="submit" class="btn btn-nuevo" name="submit_suscripcion" value="Suscribirse" />
-            <input type="hidden" name="_next" value="https://prototipo2gye.netlify.app/#suscripcion" ></input>
+            <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/" ></input>
             <input type="hidden" name="_captcha" value="false"></input> 
           </form>
         </div>
