--- a/index.html
+++ b/index.html
@@ -74,13 +74,12 @@
       <div class="texto-nosotros">
         <p class="bienvenida">Bienvenidas!</p>
         <h1>Salon Glamour & Estilo</h1>
-        <p>
-          Glamour y Estilo, te ofrece sus servicios de Belleza entregando variedades según tú estilo!!!
-Color, Iluminación, Cortes y tratamientos capilares, también realizamos  evaluación, asesoría y cuidados capilares para Tu cabello.
-Nos caracterizamos por recomendar y aconsejar para que tu Look sea el que deseas!!
+        <p>Glamour & Estilo, te ofrece sus servicios de Belleza entregando variedades según tú estilo!!!</p>
+        <p>Color, Iluminación, Cortes y tratamientos capilares, también realizamos  evaluación, asesoría y cuidados capilares para tu cabello.</p>
+        <p>Nos caracterizamos por recomendar y aconsejar para que tu Look sea el que deseas!!</p>
+        <p>“La vida es demasiado corta para llevar un Pelo Aburrido”</p>
 
-“ La vida es demasiado corta para llevar un Pelo Aburrido”
-        </p>        
+               
         <a href="https://wa.me/56962964710?text=Hola!!%20quisiera%20AGENDAR%20UNA%20HORA" target="_blank" class="btn btn-nuevo">Agenda tu hora</a>
       </div>
       <div class="imagenes-nosotros">
