--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <div class="texto-nosotros">
         <p class="bienvenida">Bienvenidas!</p>
         <h1>Salon Glamour & Estilo</h1>
-        <p>Glamour & Estilo, te ofrece sus servicios de Belleza entregando variedades según tú estilo!!!</p><br><br>
-        <p>Color, Iluminación, Cortes y tratamientos capilares, también realizamos  evaluación, asesoría y cuidados capilares para tu cabello.</p><br><br>
+        <p>Glamour & Estilo, te ofrece sus servicios de Belleza entregando variedades según tú estilo!!!</p><br>
+        <p>Color, Iluminación, Cortes y tratamientos capilares, también realizamos  evaluación, asesoría y cuidados capilares para tu cabello.</p><br>
         <p>Te brindamos asesoría personalizada para que tu Look sea el que deseas!!</p><br><br>
-        <p>“La vida es demasiado corta para llevar un Pelo Aburrido”</p>
+        <p>“La vida es demasiado corta para llevar un Pelo Aburrido”</p><br>
 
                
         <a href="https://wa.me/56962964710?text=Hola!!%20quisiera%20AGENDAR%20UNA%20HORA" target="_blank" class="btn btn-nuevo">Agenda tu hora</a>
