cambio imagenes productos

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
       <div class="botones-productos">
         <button class="todos btn btn-categoria">Todos</button>
         <button class="shampoos btn btn-categoria">Shampoo</button>
-        <button class="acondicionadores btn btn-categoria">Acondicionador</button>
+        <button class="acondicionadores btn btn-categoria">Packs</button>
         <button class="cremas btn btn-categoria">Cremas</button>
         <button class="otros btn btn-categoria">Otros</button>
       </div>
       <div class="productos">
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/a1.webp" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo1.jpeg" alt="shampoo" />
           <h2>Braliss</h2>
           <p>shampoo para cabello 250ml.</p>
           <div class="precio">
@@ -229,7 +229,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/a2.webp" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo2.jpeg" alt="shampoo" />
           <h2>Imagea</h2>
           <p>Shampoo + Acondicionar Resistance Inoar 1l</p>
           <div class="precio">
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/a3.webp" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo3.jpeg" alt="shampoo" />
           <h2>Link-d</h2>
           <p>Shampoo ligero con una mezcla especial de aceites. 125ml.</p>
           <div class="precio">
@@ -247,7 +247,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/a13.jpg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack1.jpeg" alt="acondicionador" />
           <h2>Davines</h2>
           <p>Acondicionador Ligero Nutrición Cabello Seco Lait Vital Nutritive 200ml</p>
           <div class="precio">
@@ -256,7 +256,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/a12.webp" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack2.jpeg" alt="acondicionador" />
           <h2>Jenoris</h2>
           <p>Acondicionador 2 para cabello seco 250ml.</p>
           <div class="precio">
@@ -265,7 +265,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/a6.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack3.jpeg" alt="acondicionador" />
           <h2>Estereo color</h2>
           <p>Acondicionador efecto liso 500 ml</p>
           <div class="precio">
@@ -274,7 +274,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/a5.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
           <h2>Kerastase</h2>
           <p>Máscara Reconstrucción Cabello Muy Dañado Masque Thérapiste Resistance 200ml</p>
           <div class="precio">
@@ -283,7 +283,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/s3.webp" alt="crema" />
+          <img data-src="assets/img/cremas/crema2.jpeg" alt="crema" />
           <h2>Pichara</h2>
           <p>Shiseido - Fino Premium Touch Hair Mask.</p>
           <div class="precio">
@@ -292,7 +292,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/s5.jpg" alt="crema" />
+          <img data-src="assets/img/cremas/crema3.jpeg" alt="crema" />
           <h2>Sea Hear</h2>
           <p>
             Máscara Reparadora Cabello Seco.</p>
@@ -302,7 +302,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/s6.jpg" alt="otro" />
+          <img data-src="assets/img/otros/otros1.jpeg" alt="otro" />
           <h2>Mood</h2>
           <p>Restaurador Capilar 2 Minutos</p>
           <div class="precio">
@@ -311,7 +311,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/a4.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros3.jpeg" alt="otro" />
           <h2>Moonmetique</h2>
           <p>Ampolla Oi Hidratación Profunda</p>
           <div class="precio">
@@ -320,7 +320,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/a5.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
           <h2>Elgon</h2>
           <p>High Quality Cream Elgon</p>
           <div class="precio">
