se agrega descripcion de shampoo

--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
       <div class="productos">
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo1.jpeg" alt="shampoo" />
-          <h2>Braliss</h2>
-          <p>shampoo para cabello 250ml.</p>
+          <h2>Naturielle cosmetics</h2>
+          <p>Shampoo menta,ortiga y romero 500Ml.</p>
+          <p>Contiene extracto natural de ortiga y romero. controla la caspa y evita la caída prematura.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -230,8 +231,9 @@
         </div>
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo2.jpeg" alt="shampoo" />
-          <h2>Imagea</h2>
-          <p>Shampoo + Acondicionar Resistance Inoar 1l</p>
+          <h2>Naturielle cosmetics</h2>
+          <P>Shampoo mango flor de naranjo</P>
+          <p>Gracias a sus componentes naturales ayuda a mantener el cabello fresco y libre de grasa por más tiempo.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -239,8 +241,9 @@
         </div>
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo3.jpeg" alt="shampoo" />
-          <h2>Link-d</h2>
-          <p>Shampoo ligero con una mezcla especial de aceites. 125ml.</p>
+          <h2>Naturielle cosmetics</h2>
+          <p>Shampoo leche de coco</p>
+          <p>Leche de Coco limpia suavemente el cabello, ayuda a combatir la sequedad.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
