--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo1.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
-          <p>Shampoo menta,ortiga y romero 500Ml.</p>
-          <p>Contiene extracto natural de ortiga y romero. controla la caspa y evita la caída prematura.</p>
+          <p>Shampoo menta,ortiga y romero</p>
+          <p>Controla la caspa y evita la caída prematura.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -233,7 +233,7 @@
           <img data-src="assets/img/shampoo/shampoo2.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <P>Shampoo mango flor de naranjo</P>
-          <p>Gracias a sus componentes naturales ayuda a mantener el cabello fresco y libre de grasa por más tiempo.</p>
+          <p>Cabello fresco y libre de grasa por más tiempo.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -243,7 +243,7 @@
           <img data-src="assets/img/shampoo/shampoo3.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo leche de coco</p>
-          <p>Leche de Coco limpia suavemente el cabello, ayuda a combatir la sequedad.</p>
+          <p>Ayuda a combatir la sequedad.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
