modifica texto packs

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <img data-src="assets/img/shampoo/shampoo3.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo leche de coco</p>
-          <p>Ayuda a combatir la sequedad.</p>
+          <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -251,8 +251,9 @@
         </div>
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack1.jpeg" alt="acondicionador" />
-          <h2>Davines</h2>
-          <p>Acondicionador Ligero Nutrición Cabello Seco Lait Vital Nutritive 200ml</p>
+          <h2>Naturielle cosmetics</h2>
+          <p>Pack sh. + acond. Bamboo Aloe Vera</p>
+          <p>Fuerza y crecimiento</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -260,8 +261,9 @@
         </div>
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack2.jpeg" alt="acondicionador" />
-          <h2>Jenoris</h2>
-          <p>Acondicionador 2 para cabello seco 250ml.</p>
+          <h2>Naturielle cosmetics</h2>
+          <p>Pack sh. + acond. Menta Ortiga</p>
+          <p>Control caída y caspa</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -269,8 +271,9 @@
         </div>
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack3.jpeg" alt="acondicionador" />
-          <h2>Estereo color</h2>
-          <p>Acondicionador efecto liso 500 ml</p>
+          <h2>Naturielle cosmetics</h2>
+          <p>Pack Sh. + acond. Leche de Coco</p>
+          <p>Humectación profunda</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
