--- a/index.html
+++ b/index.html
@@ -280,18 +280,19 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
-          <h2>Kerastase</h2>
-          <p>Máscara Reconstrucción Cabello Muy Dañado Masque Thérapiste Resistance 200ml</p>
+          <img data-src="assets/img/cremas/crema4.jpeg" alt="crema" />
+          <h2>VICTORIA'S SECRET</h2>
+          <p>Lotion Original varias fragancias 236ml</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema2.jpeg" alt="crema" />
-          <h2>Pichara</h2>
-          <p>Shiseido - Fino Premium Touch Hair Mask.</p>
+          <h2>Mar Beauty</h2>
+          <p>Óleo de coco</p>
+          <p>Máscara zero sal</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -299,9 +300,9 @@
         </div>
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema3.jpeg" alt="crema" />
-          <h2>Sea Hear</h2>
-          <p>
-            Máscara Reparadora Cabello Seco.</p>
+          <h2>Mar Beauty</h2>
+          <p>Impacto profundo</p>
+          <p>Máscara zero sal</p>
           <div class="precio">
             <p>$25.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
