mod. cremas y otro

--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema9.jpeg" alt="crema" />
-          <h2>VICTORIA'S SECRET</h2>
-          <p>Lotion Original varias fragancias 236ml</p>
+          <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
+          <h2>Mar Beauty</h2>
+          <p>Mascara Matizadora Champagne 250g</p>
           <div class="precio">
-            <p>$13.000 (1 unidad)</p>
+            <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -327,11 +327,20 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
-          <h2>Elgon</h2>
-          <p>High Quality Cream Elgon</p>
+          <img data-src="assets/img/cremas/crema4.jpeg" alt="otro" />
+          <h2>Victoria's Secret</h2>
+          <p>Lotion Original varias fragancias 236ml</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$13.000 (1 unidad)</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="otro">
+          <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
+          <h2>Mar Beauty</h2>
+          <p>Plancha Titanium profesional</p>
+          <div class="precio">
+            <p>$40.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
