--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <p>Pack sh. + acond. Bamboo Aloe Vera</p>
           <p>Fuerza y crecimiento</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$7.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -265,7 +265,7 @@
           <p>Pack sh. + acond. Menta Ortiga</p>
           <p>Control caída y caspa</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$7.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -275,14 +275,15 @@
           <p>Pack Sh. + acond. Leche de Coco</p>
           <p>Humectación profunda</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$7.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
-          <p>Mascara Matizadora Champagne 250g</p>
+          <p>Máscara Matizadora Champagne 250g</p>
+          <p>Baja tonos no deseados, neutraliza cabellos cobrizos o anaranjados, apto para todo tipo de cabello. </p>
           <div class="precio">
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -310,26 +311,26 @@
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros1.jpeg" alt="otro" />
-          <h2>Mood</h2>
-          <p>Restaurador Capilar 2 Minutos</p>
+          <h2>Gorro térmico profesional</h2>
+          <p>Aplica calor continuo en el cabello sin maltratarlo</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$5.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros3.jpeg" alt="otro" />
-          <h2>Moonmetique</h2>
-          <p>Ampolla Oi Hidratación Profunda</p>
+          <h2>Cepillos antifrizz</h2>
+          <p>Ayuda a evitar la estática que genera el frizz.</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$4.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/cremas/crema4.jpeg" alt="otro" />
           <h2>Victoria's Secret</h2>
-          <p>Lotion Original varias fragancias 236ml</p>
+          <p>Loción original, varias fragancias 236ml</p>
           <div class="precio">
             <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
