agrega desc. producto

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/cremas/crema4.jpeg" alt="otro" />
           <h2>Victoria's Secret</h2>
-          <p>Loción original, varias fragancias 236ml</p>
+          <p>Loción original para el cuerpo, con y sin brillo y varias fragancias 236ml</p>
           <div class="precio">
             <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
