mod. link despliegue

--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros1.jpeg" alt="otro" />
-          <h2>Gorro térmico profesional</h2>
+          <h2>Genérico</h2>
+          <p>Gorro térmico profesional</p>
           <p>Aplica calor continuo en el cabello sin maltratarlo</p>
           <div class="precio">
             <p>$5.000</p>
@@ -320,7 +321,8 @@
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros3.jpeg" alt="otro" />
-          <h2>Cepillos antifrizz</h2>
+          <h2>Genérico</h2>
+          <p>Cepillos antifrizz</p>
           <p>Ayuda a evitar la estática que genera el frizz.</p>
           <div class="precio">
             <p>$4.000 (1 unidad)</p>
@@ -330,7 +332,8 @@
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/cremas/crema4.jpeg" alt="otro" />
           <h2>Victoria's Secret</h2>
-          <p>Loción original para el cuerpo, con y sin brillo y varias fragancias 236ml</p>
+          <p>Loción original para el cuerpo 236ml</p>
+          <p>Con y sin brillo, varias fragancias</p>
           <div class="precio">
             <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
