redireccion y mensaje de error en contacto

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         </div>
       </div>
     
-      <form id="form-contacto" class="formulario"  action="https://formsubmit.co/carolina.nunezn11@gmail.com" method="POST" />
+      <form id="form-contacto" class="formulario"  action="https://formsubmit.co/nodemailerMD@gmail.com" method="POST" />
       
         <div class="input-formulario">
           <label for="nombre">Nombre</label>
@@ -412,7 +412,7 @@
           <input id="enviar" type="submit" class="btn btn-nuevo" name="submit" value="Enviar" />
         </div>
 
-        <input type="hidden" name="_next" value="https://prototipo2gye.netlify.app/#contacto" ></input>
+        <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/#contacto" ></input>
         <input type="hidden" name="_captcha" value="false"></input> 
 
       </form>
@@ -465,7 +465,7 @@
             <input type="text" placeholder="Ej: Maria Pino" name="nombre_suscripcion" /> 
             <input type="email" placeholder="Ej: ejemplo@ej.com" name="correo_suscripcion" />
             <input type="submit" class="btn btn-nuevo" name="submit_suscripcion" value="Suscribirse" />
-            <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/" ></input>
+            <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/#suscripcion" ></input>
             <input type="hidden" name="_captcha" value="false"></input> 
           </form>
         </div>
