--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <p>Shampoo menta,ortiga y romero</p>
           <p>Controla la caspa y evita la caída prematura.</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$0</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -235,7 +235,7 @@
           <P>Shampoo mango flor de naranjo</P>
           <p>Cabello fresco y libre de grasa por más tiempo.</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$0</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -245,7 +245,37 @@
           <p>Shampoo leche de coco</p>
           <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
           <div class="precio">
-            <p>$25.000</p>
+            <p>$0</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="shampoo">
+          <img data-src="assets/img/shampoo/shampoo4.jpeg" alt="shampoo" />
+          <h2>Naturielle cosmetics</h2>
+          <p>Shampoo aloe vera</p>
+          <p>Fuerza y crecimiento</p>
+          <div class="precio">
+            <p>$0</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="shampoo">
+          <img data-src="assets/img/shampoo/shampoo5.jpeg" alt="shampoo" />
+          <h2>L'oréal professionnel</h2>
+          <p>Shampoo Serie Expert Pro Longer 1500 ml.</p>
+          <p>Para cabellos largos con puntas finas y partidas o abiertas.</p>
+          <div class="precio">
+            <p>$32.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="shampoo">
+          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="shampoo" />
+          <h2>Falta un shampoo aqui</h2>
+          <p>Shampoo</p>
+          <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
+          <div class="precio">
+            <p>$0</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -272,6 +302,66 @@
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack3.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
+          <p>Pack Sh. + acond. Leche de Coco</p>
+          <p>Humectación profunda</p>
+          <div class="precio">
+            <p>$7.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/packs/pack4.jpeg" alt="acondicionador" />
+          <h2>Naturielle cosmetics</h2>
+          <p>Pack Sh. + acond. Mango</p>
+          <p>Cabello graso</p>
+          <div class="precio">
+            <p>$7.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/packs/pack5.jpeg" alt="acondicionador" />
+          <h2>Inoar</h2>
+          <p>Pack Sh. + acond. Bombar coconut 500ml.</p>
+          <p>Poderoso hidratante que actúa en el interior del cabello, reconstruyéndolo y fortaleciéndolo.</p>
+          <div class="precio">
+            <p>$18.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/packs/pack6.jpeg" alt="acondicionador" />
+          <h2>Inoar</h2>
+          <p>Pack Sh. + acond. Argan oil 1 Litro.</p>
+          <p>Hidratación y limpieza diaria para todo tipo de cabello. </p>
+          <div class="precio">
+            <p>$32.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/packs/pack7.jpeg" alt="acondicionador" />
+          <h2>Inoar</h2>
+          <p>Pack Sh. + acond. Bombar 1 Litro.</p>
+          <p> Con activos poderosos para fortalecer, suavizar y recuperar su cabello.</p>
+          <div class="precio">
+            <p>$32.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
+          <h2>falta un pack aqui</h2>
+          <p>Pack Sh. + acond. Leche de Coco</p>
+          <p>Humectación profunda</p>
+          <div class="precio">
+            <p>$7.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="acondicionador">
+          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
+          <h2>falta un pack aqui</h2>
           <p>Pack Sh. + acond. Leche de Coco</p>
           <p>Humectación profunda</p>
           <div class="precio">
@@ -309,11 +399,81 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="crema" />
+          <h2>aqui falta la crema4</h2>
+          <p>Impacto profundo</p>
+          <p>Máscara zero sal</p>
+          <div class="precio">
+            <p>$0</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/cremas/crema5.jpeg" alt="crema" />
+          <h2>Skala expert</h2>
+          <p>Mayonesa capilar 1 kilo.</p>
+          <p>Desarrollado especialmente para satisfacer las necesidades de cabello ondulado, rizado, afro y en transición. </p>
+          <div class="precio">
+            <p>$10.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/cremas/crema6.jpeg" alt="crema" />
+          <h2>Skala expert</h2>
+          <p>Skala mais lisos 1 kilo.</p>
+          <p>Cabello suelto y sin frizz - para cabello natural liso o alisado</p>
+          <div class="precio">
+            <p>$10.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/cremas/crema7.jpeg" alt="crema" />
+          <h2>Skala expert</h2>
+          <p>Máscara de vitaminas SOS 1 kilo.</p>
+          <p>Fortalecedor para el cabello, una bomba de vitaminas con un efecto sorprendente</p>
+          <div class="precio">
+            <p>$10.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/cremas/crema8.jpeg" alt="crema" />
+          <h2>Skala expert</h2>
+          <p>Mascarilla Divino Potinho KIDS 1 kilo.</p>
+          <p> Sirve como acondicionador (con o sin enjuague), como tratamiento y como crema de peinar. Crema de textura media. Ideal para niños.</p>
+          <div class="precio">
+            <p>$10.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="crema">
+          <img data-src="assets/img/cremas/crema9.jpeg" alt="crema" />
+          <h2>Orus</h2>
+          <p>Matizador violeta 500ml. </p>
+          <p>Ayuda a contrarrestar los tonos indeseados del pelo, como naranjos y amarillentos.</p>
+          <div class="precio">
+            <p>$10.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros1.jpeg" alt="otro" />
           <h2>Genérico</h2>
           <p>Gorro térmico profesional</p>
           <p>Aplica calor continuo en el cabello sin maltratarlo</p>
+          <div class="precio">
+            <p>$5.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="otro">
+          <img data-src="assets/img/otros/otros2.jpeg" alt="otro" />
+          <h2>Rocco</h2>
+          <p>Protector térmico Rocco anti frizz 375 ml.</p>
+          <p>Ideal para brushing y plancha, entrega una máxima protección contra la humedad, estática, salitre, viento y cambios en el clima..</p>
           <div class="precio">
             <p>$5.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -330,21 +490,31 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/cremas/crema4.jpeg" alt="otro" />
-          <h2>Victoria's Secret</h2>
-          <p>Loción original para el cuerpo 236ml</p>
-          <p>Con y sin brillo, varias fragancias</p>
-          <div class="precio">
-            <p>$13.000 (1 unidad)</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
           <h2>Mar Beauty</h2>
           <p>Plancha Titanium profesional</p>
           <div class="precio">
             <p>$40.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="otro">
+          <img data-src="assets/img/otros/otros5.jpeg" alt="otro" />
+          <h2>Alterego Italy</h2>
+          <p>Spray termoprotector 300ml.</p>
+          <p>Protección garantizada para altas temperaturas.</p>
+          <div class="precio">
+            <p>$18.000</p>
+            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+          </div>
+        </div>
+        <div class="producto" data-producto="otro">
+          <img data-src="assets/img/cremas/otros6.jpeg" alt="otro" />
+          <h2>Victoria's Secret</h2>
+          <p>Loción original para el cuerpo 236ml</p>
+          <p>Con y sin brillo, varias fragancias</p>
+          <div class="precio">
+            <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
