modificacion texto shampoo

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo4.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
-          <p>Shampoo aloe vera</p>
-          <p>Fuerza y crecimiento</p>
+          <p>Shampoo aloe vera 500 ml.</p>
+          <p>Entrega una limpieza óptima y fuerza al crecimiento del cabello, libre de sodio y colorantes artificiales. </p>
           <div class="precio">
             <p>$0</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -262,7 +262,7 @@
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/shampoo/shampoo5.jpeg" alt="shampoo" />
           <h2>L'oréal professionnel</h2>
-          <p>Shampoo Serie Expert Pro Longer 1500 ml.</p>
+          <p>Shampoo Expert Pro Longer 1500 ml.</p>
           <p>Para cabellos largos con puntas finas y partidas o abiertas.</p>
           <div class="precio">
             <p>$32.000</p>
