modificacion de textos

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <img data-src="assets/img/shampoo/shampoo4.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo aloe vera 500 ml.</p>
-          <p>Entrega una limpieza óptima y fuerza al crecimiento del cabello, libre de sodio y colorantes artificiales. </p>
+          <p>Otorga crecimiento y fuerza, libre de sodio y colorantes artificiales. </p>
           <div class="precio">
             <p>$0</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
