--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <img data-src="assets/img/packs/pack4.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
           <p>Pack Sh. + acond. Mango</p>
-          <p>Cabello graso</p>
+          <p>Controla la grasitud, deja tu pelo fresco y limpio en todo momento.</p>
           <div class="precio">
             <p>$7.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -322,8 +322,8 @@
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack5.jpeg" alt="acondicionador" />
           <h2>Inoar</h2>
-          <p>Pack Sh. + acond. Bombar coconut 500ml.</p>
-          <p>Poderoso hidratante que actúa en el interior del cabello, reconstruyéndolo y fortaleciéndolo.</p>
+          <p>Pack Sh. + acond. Coconut 500ml.</p>
+          <p>Poderoso hidratante reconstruye y fortalece.</p>
           <div class="precio">
             <p>$18.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
