--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <img data-src="assets/img/cremas/crema5.jpeg" alt="crema" />
           <h2>Skala expert</h2>
           <p>Mayonesa capilar 1 kilo.</p>
-          <p>Desarrollado especialmente para satisfacer las necesidades de cabello ondulado, rizado, afro y en transición. </p>
+          <p>Satisface las necesidades de cabello ondulado, rizado, afro y en transición. </p>
           <div class="precio">
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -443,7 +443,7 @@
           <img data-src="assets/img/cremas/crema8.jpeg" alt="crema" />
           <h2>Skala expert</h2>
           <p>Mascarilla Divino Potinho KIDS 1 kilo.</p>
-          <p> Sirve como acondicionador (con o sin enjuague), como tratamiento y como crema de peinar. Crema de textura media. Ideal para niños.</p>
+          <p>Crema de textura media. Ideal para niños (con o sin enjuague).</p>
           <div class="precio">
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -453,7 +453,7 @@
           <img data-src="assets/img/cremas/crema9.jpeg" alt="crema" />
           <h2>Orus</h2>
           <p>Matizador violeta 500ml. </p>
-          <p>Ayuda a contrarrestar los tonos indeseados del pelo, como naranjos y amarillentos.</p>
+          <p>Ayuda a contrarrestar tonos naranjos y amarillentos.</p>
           <div class="precio">
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
