modifico ruta imagenes

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           <img data-src="assets/img/otros/otros2.jpeg" alt="otro" />
           <h2>Rocco</h2>
           <p>Protector térmico Rocco anti frizz 375 ml.</p>
-          <p>Ideal para brushing y plancha, entrega una máxima protección contra la humedad, estática, salitre, viento y cambios en el clima..</p>
+          <p>Protección contra la humedad, estática, salitre, viento y cambios en el clima..</p>
           <div class="precio">
             <p>$5.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -499,7 +499,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros5.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros5.jpg" alt="otro" />
           <h2>Alterego Italy</h2>
           <p>Spray termoprotector 300ml.</p>
           <p>Protección garantizada para altas temperaturas.</p>
@@ -509,7 +509,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/cremas/otros6.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros6.jpeg" alt="otro" />
           <h2>Victoria's Secret</h2>
           <p>Loción original para el cuerpo 236ml</p>
           <p>Con y sin brillo, varias fragancias</p>
