modificacion de direccion en maps

--- a/index.html
+++ b/index.html
@@ -590,8 +590,9 @@
     
     <div id="ubicacion" class="ubicacion contenedor">
         <h3>Ubícanos en el mapa</h3>
-      <div class="mapa">        
-          <iframe
+      <div class="mapa"> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3338.4037467248686!2d-70.68192492431956!3d-33.20350997348836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662bbb040ba771d%3A0x252dd19a9426aeb1!2sLa%20Inmaculada%20Concepci%C3%B3n%20396%2C%209351377%20Chacabuco%2C%20Colina%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1691654326085!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>       
+          <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3338.4009015354895!2d-70.68189612371016!3d-33.20358458491313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662bbb0404e5baf%3A0xdde11d75cfbdc3c0!2sCentro%20Cultural%20de%20Colina!5e0!3m2!1ses!2scl!4v1690442687599!5m2!1ses!2scl"
             width="100%"
             height="600"
@@ -599,7 +600,7 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>        
+          ></iframe>         -->
       </div>
     </div>
 
