--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
       <div class="contenedor-navegacion">
         <div class="contenido-navegacion contenedor">
           <div class="logo"> 
-            <!-- <h1><div class="lg"><img data-src="assets/img/logo-glamour-y-estilo.ico" alt="icono-gye"/></div><span class="primario"</span>Salon Glamour<span class="secundario"></span><span class="primario"> Estilo</span></h1>                   -->
-            <h1><span class="primario"</span>Salon Glamour<span class="secundario"></span><span class="primario"> Estilo</span></h1>
+            <h1>
+              <span class="primario"</span>Glamour 
+                <img class="lg" data-src="assets/img/logo-glamour-y-estilo.ico" alt="icono-gye"/>
+              </span>
+              <span class="primario"> Estilo</span>
+            </h1>
           </div>
           <nav class="navegacion ocultar">
             <a href="#inicio"inicio">Inicio</a>
@@ -210,7 +214,7 @@
     </div>
 
     <section id="productos" class="contenedor">
-      <h2 class="texto-productos">Productos</h2>
+      <h2 class="texto-productos" >Productos</h2>
       <div class="botones-productos">
         <button class="todos btn btn-categoria">Todos</button>
         <button class="shampoos btn btn-categoria">Shampoo</button>
@@ -372,7 +376,7 @@
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
-          <p>Máscara Matizadora Champagne 250g</p>
+          <p>Máscara Matizadora Champagne 250 gr.</p>
           <p>Baja tonos no deseados, neutraliza cabellos cobrizos o anaranjados, apto para todo tipo de cabello. </p>
           <div class="precio">
             <p>$10.000</p>
@@ -383,7 +387,7 @@
           <img data-src="assets/img/cremas/crema2.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
           <p>Óleo de coco</p>
-          <p>Máscara zero sal</p>
+          <p>Para una hidratación profunda.</p>
           <div class="precio">
             <p>$8.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -393,7 +397,7 @@
           <img data-src="assets/img/cremas/crema3.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
           <p>Impacto profundo</p>
-          <p>Máscara zero sal</p>
+          <p>Para reconstruir y reparar tu cabello.</p>
           <div class="precio">
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -532,6 +536,7 @@
 
     <div id="contacto" class="formulario-contacto contenedor">
       <div class="informacion-contacto">
+        <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="icono-gye"/>
         <h3>Contáctanos</h3>
         <p>
           <i class="fa-solid fa-location-dot"></i>Av. Imaculada Concepción
@@ -591,16 +596,8 @@
     <div id="ubicacion" class="ubicacion contenedor">
         <h3>Ubícanos en el mapa</h3>
       <div class="mapa"> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3338.4037467248686!2d-70.68192492431956!3d-33.20350997348836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662bbb040ba771d%3A0x252dd19a9426aeb1!2sLa%20Inmaculada%20Concepci%C3%B3n%20396%2C%209351377%20Chacabuco%2C%20Colina%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1691654326085!5m2!1ses-419!2scl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>       
-          <!-- <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3338.4009015354895!2d-70.68189612371016!3d-33.20358458491313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662bbb0404e5baf%3A0xdde11d75cfbdc3c0!2sCentro%20Cultural%20de%20Colina!5e0!3m2!1ses!2scl!4v1690442687599!5m2!1ses!2scl"
-            width="100%"
-            height="600"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>         -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3338.4037467248686!2d-70.68192492431956!3d-33.20350997348836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662bbb040ba771d%3A0x252dd19a9426aeb1!2sLa%20Inmaculada%20Concepci%C3%B3n%20396%2C%209351377%20Chacabuco%2C%20Colina%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1691654326085!5m2!1ses-419!2scl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>        
       </div>
     </div>
 
