--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="logo"> 
             <h1>
               <span class="primario"</span>Glamour 
-                <img class="lg" data-src="assets/img/logo-glamour-y-estilo.ico" alt="icono-gye"/>
+                <img class="lgye" data-src="assets/img/logo-glamour-y-estilo.ico" alt="icono-gye"/>
               </span>
               <span class="primario"> Estilo</span>
             </h1>
