se agrega producto

--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
-          <h2>falta un pack aqui</h2>
-          <p>Pack Sh. + acond. Leche de Coco</p>
-          <p>Humectación profunda</p>
+          <img data-src="assets/img/packs/pack8.jpeg" alt="acondicionador" />
+          <h2>Alterego Italy</h2>
+          <p>Pack Sh. + acond. Color care 950 ml.</p>
+          <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
           <div class="precio">
-            <p>$7.000</p>
+            <p>$28.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
