modifico nombre de producto

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         </div>
         <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack8.jpeg" alt="acondicionador" />
-          <h2>Alterego Italy</h2>
+          <h2>Alter Ego Italy</h2>
           <p>Pack Sh. + acond. Color care 950 ml.</p>
           <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
           <div class="precio">
@@ -504,7 +504,7 @@
         </div>
         <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros5.jpg" alt="otro" />
-          <h2>Alterego Italy</h2>
+          <h2>Alter Ego Italy</h2>
           <p>Spray termoprotector 300ml.</p>
           <p>Protección garantizada para altas temperaturas.</p>
           <div class="precio">
