--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <p>Shampoo menta,ortiga y romero</p>
           <p>Controla la caspa y evita la caída prematura.</p>
           <div class="precio">
-            <p>$0</p>
+            <p>$4.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -239,7 +239,7 @@
           <P>Shampoo mango flor de naranjo</P>
           <p>Cabello fresco y libre de grasa por más tiempo.</p>
           <div class="precio">
-            <p>$0</p>
+            <p>$4.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -249,7 +249,7 @@
           <p>Shampoo leche de coco</p>
           <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
           <div class="precio">
-            <p>$0</p>
+            <p>$4.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -259,7 +259,7 @@
           <p>Shampoo aloe vera 500 ml.</p>
           <p>Otorga crecimiento y fuerza, libre de sodio y colorantes artificiales. </p>
           <div class="precio">
-            <p>$0</p>
+            <p>$4.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -275,11 +275,11 @@
         </div>
         <div class="producto" data-producto="shampoo">
           <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="shampoo" />
-          <h2>Falta un shampoo aqui</h2>
-          <p>Shampoo</p>
-          <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
+          <h2>Alter Ego Italy</h2>
+          <p>Shampoo Color care 950 ml.</p>
+          <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
           <div class="precio">
-            <p>$0</p>
+            <p>$28.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
@@ -354,9 +354,9 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack8.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
           <h2>Alter Ego Italy</h2>
-          <p>Pack Sh. + acond. Color care 950 ml.</p>
+          <p>Pack Sh. + acond. </p>
           <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
           <div class="precio">
             <p>$28.000</p>
@@ -587,7 +587,7 @@
           <input id="enviar" type="submit" class="btn btn-nuevo" name="submit" value="Enviar" />
         </div>
 
-        <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/#contacto" ></input>
+        <input type="hidden" name="_next" value="https://glamouryestilo.netlify.app/#form-contacto" ></input>
         <input type="hidden" name="_captcha" value="false"></input> 
 
       </form>
