--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo6.jpg" alt="shampoo" />
           <h2>Alter Ego Italy</h2>
           <p>Shampoo Color care 950 ml.</p>
           <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
@@ -343,7 +343,7 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <div class="producto" data-producto="acondicionador">
+        <!-- <div class="producto" data-producto="acondicionador">
           <img data-src="assets/img/packs/pack7.jpeg" alt="acondicionador" />
           <h2>Inoar</h2>
           <p>Pack Sh. + acond. Bombar 1 Litro.</p>
@@ -372,7 +372,7 @@
             <p>$7.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
-        </div>
+        </div> -->
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
@@ -403,7 +403,7 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <div class="producto" data-producto="crema">
+        <!-- <div class="producto" data-producto="crema">
           <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="crema" />
           <h2>aqui falta la crema4</h2>
           <p>Impacto profundo</p>
@@ -432,7 +432,7 @@
             <p>$10.000</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
-        </div>
+        </div> -->
         <div class="producto" data-producto="crema">
           <img data-src="assets/img/cremas/crema7.jpeg" alt="crema" />
           <h2>Skala expert</h2>
@@ -493,7 +493,7 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <div class="producto" data-producto="otro">
+        <!-- <div class="producto" data-producto="otro">
           <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
           <h2>Mar Beauty</h2>
           <p>Plancha Titanium profesional</p>
@@ -521,7 +521,7 @@
             <p>$13.000 (1 unidad)</p>
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
