cambio de correo

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
       </div>
     
-      <form id="form-contacto" class="formulario"  action="https://formsubmit.co/nodemailerMD@gmail.com" method="POST" />
+      <form id="form-contacto" class="formulario"  action="https://formsubmit.co/carolina.nunezn11@gmail.com" method="POST" />
       
         <div class="input-formulario">
           <label for="nombre">Nombre</label>
