se crea boton para volver y suavisa scroll

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
         </div>
         <div class="info">
           <h3>Horarios</h3>
-          <p>Lunes - Sábados 10:30am - 19:30pm</p>
+          <p>Lunes - viernes 10:30am - 19:30pm</p>
           <p><span class="primario">(Se atiende solo con cita)</span></p>
           <div class="redes-sociales redes-pie">
             <a href="https://www.instagram.com/glamour_y_estiloo/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -640,6 +640,8 @@
 
       </div>
     </div>
+
+    <a class="boton-volver" href="#inicio"><i class="fa-solid fa-circle-up"></i></a>
     
     <footer class="footer">
       <p>
